--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <header class="header">
       <div class="container">
         <a class="header__brand" href="#"
-          ><img src="/img/header_brand.svg" alt="header brand"
+          ><img src="./img/header_brand.svg" alt="header brand"
         /></a>
         <div class="spacer"></div>
         <ul class="header__nav">
